src/objects/Content_Override__c.object
<CustomObject><fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipName>Content_Overrides1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>Content_Overrides</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipName>Content_Overrides</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Page Override</label><nameField>
        <displayFormat>Override {0}</displayFormat>
        <label>Page Overwrite Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Page Overrides</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>